--- a/app/src/main/res/layout/activity_admin_controler.xml
+++ b/app/src/main/res/layout/activity_admin_controler.xml
@@ -104,7 +104,7 @@
 
             <Button
                 android:id="@+id/btnInsert"
-                android:layout_width="wrap_content"
+                android:layout_width="136dp"
                 android:layout_height="wrap_content"
                 android:text="Insert" />
 
@@ -114,13 +114,6 @@
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
                 android:text="Delete" />
-
-            <Button
-                android:id="@+id/btnUpdate"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_weight="1"
-                android:text="Update" />
 
             <Button
                 android:id="@+id/btnReset"
@@ -138,7 +131,7 @@
             android:orientation="vertical">
 
             <ListView
-                android:id="@+id/lvCat"
+                android:id="@+id/lvUsers"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent" />
         </LinearLayout>
