--- a/app/src/main/res/layout/activity_admin_controler.xml
+++ b/app/src/main/res/layout/activity_admin_controler.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@drawable/admin"
-    tools:context=".AdminControler" >
+    tools:context=".controler.AdminControler" >
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -28,7 +28,7 @@
             android:orientation="horizontal">
 
             <TextView
-                android:id="@+id/txtIdentifiant"
+                android:id="@+id/txtnom"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
@@ -53,7 +53,7 @@
             android:orientation="horizontal">
 
             <TextView
-                android:id="@+id/txtPassword"
+                android:id="@+id/txtcategorie"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
