--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -66,7 +66,7 @@
                     android:src="@drawable/user" />
 
                 <EditText
-                    android:id="@+id/txtIdentifiant"
+                    android:id="@+id/txtnom"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_marginLeft="15dp"
@@ -97,7 +97,7 @@
                     android:src="@drawable/password" />
 
                 <EditText
-                    android:id="@+id/txtPassword"
+                    android:id="@+id/txtcategorie"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_marginLeft="15dp"
